--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,28 @@ repositories {
 }
 
 dependencies {
+	// jpa
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+	// web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// test
+	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// validator
+	implementation 'commons-validator:commons-validator:1.7'
+
+	// DB
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	//s3
 	implementation 'software.amazon.awssdk:s3:2.20.0'
