--- a/build.gradle
+++ b/build.gradle
@@ -45,11 +45,17 @@ dependencies {
     // validator
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-	// DB
-	runtimeOnly 'com.mysql:mysql-connector-j'
+    // DB
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
-    //s3
-	implementation 'software.amazon.awssdk:s3:2.20.0'
+    // s3
+    implementation 'software.amazon.awssdk:s3:2.20.0'
+
+    // mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
