--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     //s3
 	implementation 'software.amazon.awssdk:s3:2.20.0'
+	implementation 'net.coobird:thumbnailator:0.4.18'
 }
 
 tasks.named('test') {
