--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
 	// validator
 	implementation 'commons-validator:commons-validator:1.7'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// DB
 	runtimeOnly 'com.mysql:mysql-connector-j'
